[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "mujoco_ik_control"
version = "0.0.1"
requires-python=">=3.8"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
